<resources>
    <string name="app_name">DaggerTest</string>
    <string name="app_title">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movieName">Nombre</string>
    <string name="vote_average">Votos</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release date</string>
    <string name="budget">Budget</string>
    <string name="click">Click here to watch trailer</string>
    <string name="urlTrailer">Trailer</string>
    <string name="title_activity_movie_description">MovieDescriptionActivity</string>
    <string name="trailers">Trailer list</string>
    <string name="activity_image_trans">poster_image</string>
    <string name="title_activity_movie_description2">MovieDescription2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="view_details">details</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
