<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.jorge_caro.daggertest.movieDescription.view.DescriptionFragment"
    android:orientation="vertical">

     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scaleType="fitXY"
         android:layout_weight="4"
         android:id="@+id/posterImage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/movieVoteAverage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:padding="10dp"
            tools:text="@string/vote_average" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:padding="10dp"
            tools:text="@string/release_date" />

    </LinearLayout>

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:layout_weight="2"
        tools:text="@string/overview" />

    <TextView
        android:id="@+id/budget"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:padding="10dp"
        tools:text="@string/budget" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/trailers"
        android:textColor="@android:color/holo_green_light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <ListView
        android:id="@+id/trailers"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_margin="6dp"/>
</LinearLayout>
